protobufs working